@@ -1,51 +1,0 @@
-;::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
-;
-;	Project file generated by Visual-MinGW 0.46 alpha.
-;	This file shouldn't be edited manually.
-;	More information: http://visual-mingw.sourceforge.net/
-;
-;::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
-
-[PrjHeader]
-Generator = VMinGW
-Signature = 45
-PrjVersion = 100
-
-[Project]
-NumFiles = 2
-BuildMakefile = 1
-
-[Archives]
-Directory = .
-Flags = *.*
-
-[Makefile]
-Name = .\makefile
-Show = 0
-
-Target = .\libgetopt.a
-MAKE = make
-CC = gcc
-WRES = windres
-TEST = gcc -v
-Build = 0
-Debug = 0
-Lang = 0
-CppFlags = -DHAVE_STRING_H
-CcWarning = -W -Wall -pedantic
-CcOptimize = -O2
-CcFlags = 
-IncDirs = -I../include
-LdStrip = -s
-LdOptions = 
-LdLibraries = 
-LdLibDirs = -L../lib
-
-[File1]
-Name = .\getopt.c
-Show = 0
-
-[File2]
-Name = .\getopt.h
-Show = 0
-
