@@ -1,79 +1,0 @@
-;::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
-;
-;	Project file generated by Visual-MinGW 0.46 alpha.
-;	This file shouldn't be edited manually.
-;	More information: http://visual-mingw.sourceforge.net/
-;
-;::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
-
-[PrjHeader]
-Generator = VMinGW
-Signature = 45
-PrjVersion = 100
-
-[Project]
-NumFiles = 10
-BuildMakefile = 1
-
-[Archives]
-Directory = .
-Flags = *.prj .\bin\*.dll .\src\*.* .\include\*.h -x *.o
-
-[Makefile]
-Name = .\src\makefile
-Show = 0
-
-Target = .\1.0\msys.exe
-MAKE = make
-CC = g++
-WRES = windres
-TEST = gcc -v
-Build = 3
-Debug = 1
-Lang = 1
-CppFlags = 
-CcWarning = -W -Wall -pedantic
-CcOptimize = -O2
-CcFlags = -fvtable-thunks
-IncDirs = -I../lib -I../winui/include
-LdStrip = -s
-LdOptions = 
-LdLibraries = -lwinui -lcomctl32 -lgetopt
-LdLibDirs = -L ../lib -L ../winui/lib
-
-[File1]
-Name = .\src\main.cpp
-Show = 1
-
-[File2]
-Name = .\src\main.h
-Show = 1
-
-[File3]
-Name = .\src\rsrc.h
-Show = 0
-
-[File4]
-Name = .\src\rsrc.rc
-Show = 0
-
-[File5]
-Name = .\winui\include\CFile.h
-Show = 0
-
-[File6]
-Name = .\winui\include\CList.h
-Show = 0
-
-[File7]
-Name = .\winui\include\winui.h
-Show = 0
-
-[File8]
-Name = .\ChangeLog
-Show = 1
-
-[File9]
-Name = .\Readme
-Show = 0
-
